--- a/huchu-backend/package.json
+++ b/huchu-backend/package.json
@@ -1,1 +1,20 @@
+{
+  "name": "huchu-backend",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vercel dev",
+    "build": "echo 'Vercel functions build by platform'",
+    "start": "vercel dev"
+    },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5.6.3"
+  }
+}
 
