--- a/huchu-backend/package.json
+++ b/huchu-backend/package.json
@@ -2,13 +2,18 @@
   "name": "huchu-backend",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "vercel dev",
-    "build": "echo 'Vercel functions build by platform'",
+    "build": "echo \"Vercel functions are built on deploy\"",
     "start": "vercel dev"
-    },
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@aws-sdk/client-s3": "^3.676.0",
+    "@aws-sdk/s3-request-presigner": "^3.676.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2"
   },
@@ -17,4 +22,3 @@
     "typescript": "^5.6.3"
   }
 }
-
